@@ -15,7 +15,6 @@
                 <string>editable_columns</string>
                 <string>list_action</string>
                 <string>list_method</string>
-                <string>portal_types</string>
                 <string>search</string>
                 <string>select</string>
                 <string>sort</string>
@@ -146,21 +145,6 @@
                     <key> <string>list_method</string> </key>
                     <value>
                       <persistent> <string encoding="base64">AAAAAAAAAAI=</string> </persistent>
-                    </value>
-                </item>
-                <item>
-                    <key> <string>portal_types</string> </key>
-                    <value>
-                      <list>
-                        <tuple>
-                          <string>Web Page</string>
-                          <string>Web Page</string>
-                        </tuple>
-                        <tuple>
-                          <string>Web Section</string>
-                          <string>Web Section</string>
-                        </tuple>
-                      </list>
                     </value>
                 </item>
                 <item>
